--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
-# Editor directories and files
+
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -26,5 +26,6 @@ coverage
 *.njsproj
 *.sln
 *.sw?
-
 *.tsbuildinfo
+.env
+.env.local
