feat: add lib I18n e suas configurações

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "openai": "^6.1.0",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.17",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-i18n": "^11.1.12"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
