--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "openai": "^6.1.0",
     "pinia": "^3.0.3",
-    "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
     "vue-i18n": "^11.1.12"
   },
